Refactor views to meet MVVM standard
Renamed multiple components, transitioning from controls to view models. This was done to adhere to the Model-View-ViewModel standard, increasing separation of view and logic for simpler maintenance and more scalable code. This refactor also enables more effective use of .NET Core's dependency injection feature. Filename changes indicate the transition from controller-focus to view model-focus. This commit also includes the adjustment of the variable type from object to ViewModelBase in various places, again, bringing the project inline with MVVM standards.

--- a/PulsarWorker.Desktop/Views/Components/MutlipleChoiceSettingView.axaml
+++ b/PulsarWorker.Desktop/Views/Components/MutlipleChoiceSettingView.axaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:components="clr-namespace:PulsarWorker.Desktop.ViewModels.Components"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="PulsarWorker.Desktop.Views.Components.MultipleChoiceSetting">
+             x:Class="PulsarWorker.Desktop.Views.Components.MultipleChoiceSettingView">
     
     <Design.DataContext>
         <components:MultipleChoiceSettingViewModel />
