--- a/PulsarWorker.Desktop/Views/PulsarApiView.axaml
+++ b/PulsarWorker.Desktop/Views/PulsarApiView.axaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:PulsarWorker.Desktop.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="PulsarWorker.Desktop.Views.PulsarApi">
+             x:Class="PulsarWorker.Desktop.Views.PulsarApiView">
 
     <Design.DataContext>
         <viewModels:PulsarApiViewModel />
