Update Tenant and Cluster view, Add tenant retrieval
Updated the TenantView and ClusterView to display the new data structure. A StackPanel has been added to show NameSpaces(Tenants) in the respective ViewModel. Implemented GetTenants function in PulsarModel to asynchronously retrieve the list of tenants. This allows the application to display an interactive and detailed view of tenants under each cluster. Also, updated the TenantViewModel and ClusterViewModel to support the new structure and data retrieval process.

--- a/PulsarWorker.Desktop/Views/Components/ClusterView.axaml
+++ b/PulsarWorker.Desktop/Views/Components/ClusterView.axaml
@@ -9,5 +9,8 @@
         <components:ClusterViewModel />
     </Design.DataContext>
 
-    <TextBlock Text="{Binding Name}"/>
+    <StackPanel>
+        <TextBlock Text="{Binding Name}" />
+        <ItemsControl ItemsSource="{Binding Tenants}" />
+    </StackPanel>
 </UserControl>
