--- a/PulsarWorker.Desktop/Views/Components/TopicView.axaml
+++ b/PulsarWorker.Desktop/Views/Components/TopicView.axaml
@@ -2,7 +2,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:components="clr-namespace:PulsarWorker.Desktop.ViewModels.Components"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="PulsarWorker.Desktop.Views.Components.TopicView">
-    Welcome to Avalonia!
+    <Design.DataContext>
+        <components:TopicViewModel />
+    </Design.DataContext>
+
+    <StackPanel>
+        <TextBlock Text="{Binding Name}" />
+    </StackPanel>
 </UserControl>
