Refactor code and add selection mode in cluster node list
Refactored the 'SettingsViewModel' and 'PulsarApiViewModel' constructor removing unnecessary call to base class. Changed the 'ItemsControl' to 'ListBox' in 'PulsarApiView.axaml' to allow selection among cluster nodes. Introduced an 'ISelectionModel' to 'PulsarApiViewModel' and updated the model whenever selection changes. These changes provide better UX by allowing selection of cluster nodes.

--- a/PulsarWorker.Desktop/Views/PulsarApiView.axaml
+++ b/PulsarWorker.Desktop/Views/PulsarApiView.axaml
@@ -18,8 +18,10 @@
                        FontWeight="Bold"
                        Margin="0,0,0,5" />
 
-            <!-- TODO add cluster node list -->
-            <ItemsControl ItemsSource="{Binding Clusters}"/>
+            <ListBox 
+                ItemsSource="{Binding Clusters}"
+                Selection="{Binding Selection, Mode=TwoWay}"
+                SelectionMode="Toggle, Single"/>
 
         </StackPanel>
 
