Update UI elements and code cleanup in PulsarWorker
Several changes were made to restyle the UI and improve codebase integrity. UI-related changes include an increase in the font size for the PulsarNodes title, replacement of `ListBox` with `ItemsControl` in PulsarApiView, an update of MainWindow layout, and other various interface alterations. Code clean-up includes the removal of unused variables, placeholder comments, and the creation of a new file (AppResources.axaml) to hold application resources. This commit improves application aesthetics and the overall cleanliness of the codebase.

--- a/PulsarWorker.Desktop/Views/Components/ClusterView.axaml
+++ b/PulsarWorker.Desktop/Views/Components/ClusterView.axaml
@@ -9,8 +9,17 @@
         <components:ClusterViewModel />
     </Design.DataContext>
 
-    <StackPanel>
-        <TextBlock Text="{Binding Name}" />
-        <ItemsControl ItemsSource="{Binding Tenants}" />
-    </StackPanel>
+    <Border BorderBrush="WhiteSmoke"
+            BorderThickness="1"
+            CornerRadius="3"
+            Background="#333333">
+        <StackPanel Margin="2">
+            <TextBlock Text="{Binding Name}" FontSize="30" FontWeight="Bold" />
+            <TextBlock Text="Type: Cluster" FontSize="20" FontStyle="Italic" FontWeight="Light"
+                       FontStretch="SemiExpanded" Padding="10, 2,2,2" />
+            <Expander Header="Tenants" HorizontalAlignment="Stretch">
+                <ItemsControl ItemsSource="{Binding Tenants}" />
+            </Expander>
+        </StackPanel>
+    </Border>
 </UserControl>
