--- a/PulsarWorker.Desktop/App.axaml
+++ b/PulsarWorker.Desktop/App.axaml
@@ -5,12 +5,12 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceInclude Source="/Assets/AppResources.axaml"/>
+                <ResourceInclude Source="/Assets/AppResources.axaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
 
     <Application.Styles>
-        <FluentTheme DensityStyle="Compact"/>
+        <StyleInclude Source="avares://Semi.Avalonia/Themes/Index.axaml" />
     </Application.Styles>
 </Application>
