--- a/PulsarWorker.Desktop/Views/PulsarApiView.axaml
+++ b/PulsarWorker.Desktop/Views/PulsarApiView.axaml
@@ -9,7 +9,7 @@
     <Design.DataContext>
         <viewModels:PulsarApiViewModel />
     </Design.DataContext>
-    
+
     <StackPanel>
         <TextBlock Text="PulsarNodes"
                    FontSize="40"
@@ -17,14 +17,58 @@
                    Margin="0,0,0,5" />
 
 
-        <TabStrip ItemsSource="{Binding Clusters}"
-                  SelectedItem="{Binding SelectedCluster}"/>
-        <TabStrip ItemsSource="{Binding Tenants}" 
-                  SelectedItem="{Binding SelectedTenant}"/>
-        <TabStrip ItemsSource="{Binding NameSpaces}"
-                  SelectedItem="{Binding SelectedNameSpace}"/>
-        <TabStrip ItemsSource="{Binding Topics}" 
-                  SelectedItem="{Binding SelectedTopic}"/>
+        <StackPanel Orientation="Horizontal">
+            <TabStrip ItemsSource="{Binding Clusters}"
+                      SelectedItem="{Binding SelectedCluster}" />
+            <Button VerticalAlignment="Center"
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Left"
+                    Height="25"
+                    Theme="{DynamicResource BorderlessButton}">
+                <PathIcon Margin="0"
+                          Data="{StaticResource RefreshIcon}">
+                </PathIcon>
+            </Button>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <TabStrip ItemsSource="{Binding Tenants}"
+                      SelectedItem="{Binding SelectedTenant}" />
+            <Button VerticalAlignment="Center"
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Left"
+                    Height="25"
+                    Theme="{DynamicResource BorderlessButton}">
+                <PathIcon Margin="0"
+                          Data="{StaticResource PlusIcon}">
+                </PathIcon>
+            </Button>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <TabStrip ItemsSource="{Binding NameSpaces}"
+                      SelectedItem="{Binding SelectedNameSpace}" />
+            <Button VerticalAlignment="Center"
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Left"
+                    Height="25"
+                    Theme="{DynamicResource BorderlessButton}">
+                <PathIcon Margin="0"
+                          Data="{StaticResource PlusIcon}">
+                </PathIcon>
+            </Button>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <TabStrip ItemsSource="{Binding Topics}"
+                      SelectedItem="{Binding SelectedTopic}" />
+            <Button VerticalAlignment="Center"
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Left"
+                    Height="25"
+                    Theme="{DynamicResource BorderlessButton}">
+                <PathIcon Margin="0"
+                          Data="{StaticResource PlusIcon}">
+                </PathIcon>
+            </Button>
+        </StackPanel>
 
     </StackPanel>
 
